--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -55,7 +55,7 @@
       <div class="row">
         <div class="col-md-4">
           <legend>
-            <h4 class="text-center"><a href="/prices">
+            <h4 class="text-center"><a href="/about">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-paw fa-stack-1x fa-inverse"></i>
@@ -64,11 +64,11 @@
               <small>Why get a dog walker?</small>
             </a></h4>
           </legend>
-          <p>Life is so expensive these days most people have to be in full time work in order to pay all the bills. This could mean many leaving their dogs at home for over 8 hours. Hiring someone to walk your dog breaks up the day for them, but you can also rest assure that your dog will be a relaxed and happy pet when you arrive home. </p>
+          <p>Life is so expensive these days most people have to be in full time work in order to pay all the bills. This could mean many leaving their dogs at home for over 8 hours. Hiring someone to walk your dog breaks up the day.</p>
         </div>
         <div class="col-md-4">
           <legend>
-            <h4 class="text-center"><a href="/prices">
+            <h4 class="text-center"><a href="/about">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-home fa-stack-1x fa-inverse"></i>
@@ -80,7 +80,7 @@
         </div>
         <div class="col-md-4">
           <legend>
-            <h4 class="text-center"><a href="/prices">
+            <h4 class="text-center"><a href="/about">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
