--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -10,10 +10,46 @@
 
 <div class="container">
 	<div class="jumbotron">
-
+		<h2 class="page-header text-center">Services Offered<small> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h2>
+		<div class="row">
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<img  src="dogs_on_a_leash.jpg" alt="dog walking price">
+					<div class="caption">
+						<h3 class="text-center">Walk - £12</h3>
+						<p>Group dog walk either morning or afternoon. Have your dog walked regularly and let them socialize with other animals.</p>
+						<p class="text-center"><a href="#" class="btn btn-primary" role="button">Inquire Now!</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<img id="shorten" src="cat_img.jpg" alt="dog walking price">
+					<div class="caption">
+						<h3 class="text-center">Home Visit/Cat Visit - £12</h3>
+						<p>Home visits to break up the day. Include letting out, feeding, cleaning up, (a short walk if old enough to do so).</p>
+						<p class="text-center"><a href="#" class="btn btn-primary" role="button">Inquire Now!</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4">
+				<div class="thumbnail">
+					<img src="dog_daycare.jpg" alt="dog walking price">
+					<div class="caption">
+						<h3 class="text-center">Day Care - £25</h3>
+						<p>Day care hours are generally around 10am-4pm but these times are flexible to your needs. Your dog will have at least 2 walks.</p>
+						<p class="text-center"><a href="#" class="btn btn-primary" role="button">Inquire Now!</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
-<% include ../partials/footer %>
+<div class="navbar navbar-fixed-bottom navbar-inverse">
+	<div class="navbar-text">
+		<p>CreatedBy: CairoStewart</p>
+	</div>
+</div>
 </body>
 </html>
