--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -9,31 +9,36 @@
 
 
 <div class="container">
-	<div class="jumbotron">
+	<div class="jumbotron last-child">
 		<div class="row">
 			<div class="col-md-9">
 				<div class="col-md-12">
-					<legend>
-						<h1>About</h1>
-					</legend>
+					<h1 class="page-header">ABOUT<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img id="profilePic" class="img-circle" src="dogwalking.jpg">
+						<img id="profilePic" src="dogwalking.jpg">
+						<a class="twitter-timeline" href="https://twitter.com/London_Dog_Walk" data-widget-id="681905171434061824" data-chrome="">Tweets by @London_Dog_Walk</a>
+					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+					</script>
 					</div>
 					<div class="col-md-8">
 						<p>Hello there, my name is Emilie. I have been a professional dog walker for the past 10+ years.</p>
 
 						<p> I became a dog walker as I missed having dogs in my life, when I was growing up I always had dogs in my life. I had a German Shorthaired Pointer called Daisy and, a cheeky Cairn Terrier called Devo. Years later, working in the city and renting, I found myself dogless and even worse petless only having tropical fish to call my own, they were pretty and relaxing but couldn't offer the companionship a dog or cat could, I missed having them in my life! I started to walk a couple of dogs in my local area, and after finishing my degree decided to devote my time to petcare, and that's were it all started!</p>
-
+						
 						​<p>I currently walk small groups of dogs in the North London areas. I walk only small groups, as I believe that walking a smaller group means that your dog gets the love and attention they need, while at the same time they get to socialize with other friendly dogs.</p>
-
-						​<p>I'm very passionate about the work I do. And have excellent references to show this. I am also CRB checked, insured with PetPlan insurance and have reasonable rates! </p>
+						
+						​<p>I'm very passionate about the work I do. And have excellent references to show this. I am also CRB checked, insured with PetPlan insurance and have reasonable rates!</p>
+						<center><i class="fa fa-paw text-center fa-2x"></i>
+						<i class="fa fa-paw text-center fa-2x" style="margin-left: 5%;margin-right: 5%;"></i>
+						<i class="fa fa-paw text-center fa-2x"></i>
+						</center>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3">
-				<div class="fb-page" data-href="https://www.facebook.com/northlondondogwalkers" data-tabs="timeline" data-width="350" data-height="1200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/northlondondogwalkers"><a href="https://www.facebook.com/northlondondogwalkers">Dog Walking -  ilovedogwalks</a></blockquote></div></div>
+				<div class="fb-page" data-href="https://www.facebook.com/northlondondogwalkers" data-tabs="timeline" data-width="350" data-height="1200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" transparent><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/northlondondogwalkers"><a href="https://www.facebook.com/northlondondogwalkers">Dog Walking -  ilovedogwalks</a></blockquote></div></div>
 			</div>
 		</div>
 	</div>
