--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -17,7 +17,7 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4">
-						<img id="profilePic" src="dogwalking.jpg">
+						<img id="profilePic" class="img-thumbnail" src="dogwalking.jpg">
 						<a class="twitter-timeline" href="https://twitter.com/London_Dog_Walk" data-widget-id="681905171434061824" data-chrome="">Tweets by @London_Dog_Walk</a>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 					</script>
@@ -34,11 +34,30 @@
 						<i class="fa fa-paw text-center fa-2x" style="margin-left: 5%;margin-right: 5%;"></i>
 						<i class="fa fa-paw text-center fa-2x"></i>
 						</center>
+						<div class="col-md-8">
+						<iframe width="400" height="650" frameborder="0" style="margin: 1em;"
+	src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJx_FvA-IZdkgRzce1x-tA2Dc&key=AIzaSyBAbx-I6MUz8mqe4OauNjlkmmVpbYZkHl4" ></iframe></div>
+						<div class="col-md-4">
+							<p><small>Based in North Finchley N12 we cover:</small></p>
+							<ul>
+							<li>East Finchley N2</li>
+							<li>Finchley Central N3</li> 
+							<li>North Finchley N12</li>
+							<li>Woodside Park N12</li>
+							<li>Totteridge N20</li>
+							<li>Whetstone N20</li>
+							<li>Friern Barnet N11</li>
+							<li>Muswell Hill N10</li>
+							<li>Mill Hill East NW7 & And all inbetween!</li>
+							</ul>
+							<p><small>We are spoilt for choice to where we can go for walkies. Brook Farm Open Space, Darland's Lake Nature Reserve, Hampstead Heath and Highgate Woods just to name a few... London is such a great place to own a dog!</small>
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3">
-				<div class="fb-page" data-href="https://www.facebook.com/northlondondogwalkers" data-tabs="timeline" data-width="350" data-height="1200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" transparent><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/northlondondogwalkers"><a href="https://www.facebook.com/northlondondogwalkers">Dog Walking -  ilovedogwalks</a></blockquote></div></div>
+				<div class="fb-page" data-href="https://www.facebook.com/northlondondogwalkers" data-tabs="timeline" data-width="350" data-height="1200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" transparent><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/northlondondogwalkers"><a href="https://www.facebook.com/northlondondogwalkers">Dog Walking - ilovedogwalks</a></blockquote></div></div>
 			</div>
 		</div>
 	</div>
