--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,8 @@
 			<li><a href="/about">About</a></li>
 			<li><a href="/prices">Prices</a></li>
 			<li><a href="/contact">Contact</a></li>
+			<li><p class="navbar-text">Tel: 07971060362 | Email: info@ilovedogwalks.co.uk</p></li>
+			
 		</ul>
 	</div>
 </div>
