--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -8,17 +8,28 @@
 
 <div class="container">
 	<div class="jumbotron">
+		<h1 class="page-header">Contact<small class="smally"> Tel: 07971060362 | Email: info@ilovedogwalks.co.uk</small></h2>
 		<div class="row">
-		<h1 class="page-header">For Inquiries</h1>
-		<form class="form" action="/contact" method="POST">
-			<label for="name">Name:</label>
-			<input type="text" name="name" class="form-control">
-			<label for="email">Email:</label>
-			<input type="email" name="email" class="form-control">
-			<label for="message">Message:</label>
-			<textarea name="message" class="form-control" cols="40" rows="10"></textarea>
-			<input type="sumbit" class="form-control btn btn-success" value="Send">
-		</form>
+			<div class="col-md-8">
+				<iframe width="500" height="450" frameborder="0" style="margin: 1em;"
+	src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJx_FvA-IZdkgRzce1x-tA2Dc&key=AIzaSyBAbx-I6MUz8mqe4OauNjlkmmVpbYZkHl4" ></iframe>
+			</div>
+			<div class="col-md-4">
+				<p><small>Based in North Finchley N12 we cover:</small></p>
+				<ul>
+				<li>East Finchley N2</li>
+				<li>Finchley Central N3</li> 
+				<li>North Finchley N12</li>
+				<li>Woodside Park N12</li>
+				<li>Totteridge N20</li>
+				<li>Whetstone N20</li>
+				<li>Friern Barnet N11</li>
+				<li>Muswell Hill N10</li>
+				<li>Mill Hill East NW7 & And all inbetween!</li>
+				</ul>
+				<p><small>We are spoilt for choice to where we can go for walkies. Brook Farm Open Space, Darland's Lake Nature Reserve, Hampstead Heath and Highgate Woods just to name a few... London is such a great place to own a dog!</small>
+				</p>
+			</div>
 		</div>
 	</div>
 </div>
