--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,65 +8,57 @@
 
 <!-- for carousel -->
 <div class="container">
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img id="carouselImage" src="dogs-in-Fichley-park.jpg" alt="Dog walking in a park">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img id="carouselImage" src="dogs-in-Fichley-park.jpg" alt="Dog walking in a park">
+      </div>
+      <div class="item">
+        <img id="carouselImage" src="dog-walking-in-Finchley.jpg" alt="Dogs out in the park">
+      </div>
+      <div class="item">
+        <img id="carouselImage" src="dog-in-Finchley.jpg" alt="Dog walker in Finchley">
+      </div>
     </div>
-    <div class="item">
-      <img id="carouselImage" src="dog-walking-in-Finchley.jpg" alt="Dogs out in the park">
-    </div>
-    <div class="item">
-      <img id="carouselImage" src="dog-in-Finchley.jpg" alt="Dog walker in Finchley">
-    </div>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-<!-- carousel end -->
-<div class="partition">
-</div>
-
-  <div class="jumbotron">
-		<legend><h2 class="text-center page-lead"><b>Dog Walking - Dog Bording - Small Animal Care</b></h2></legend>
-    <p class="lead">Hello, my name is Emilie Stewart and I run 'ilovedogwalks'. I offer dog walking and small pet care in North London. Based in North Finchley, I cover all of Finchley the surrounding areas.</p><p>Being a professional dog walker and small pet carer, I am fully insured and have over 10 years experience walking dogs and caring for small animals. I dedicate my time to caring for your pets. All the animals in my care are treated with love. Your pet will be treated as my own. I just love animals and of course they always come first.</p>
-	</div>
+  <!-- carousel end -->
   <div class="partition">
-
   </div>
-    <div class="jumbotron last-child">
-      <div class="row">
-        <div class="col-md-4">
-          <legend>
-            <h4 class="text-center"><a href="/about">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-paw fa-stack-1x fa-inverse"></i>
-              </span>
-              Dog Walks
-              <small>Why get a dog walker?</small>
-            </a></h4>
-          </legend>
-          <p>Life is so expensive these days most people have to be in full time work in order to pay all the bills. This could mean many leaving their dogs at home for over 8 hours. Hiring someone to walk your dog breaks up the day.</p>
+
+    <div class="jumbotron">
+    <div class="row">
+      <div class="col-md-3">
+        <legend>
+          <h4 class="text-center"><a href="/about">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-paw fa-stack-1x fa-inverse"></i>
+            </span>
+            Dog Walks
+          </a></h4>
+        </legend>
+        <p>Choose between a 1 hour walk or 1.5hr walk depending on your dogs needs. Your dog will be safely picked up and returned happy and ready for a nap. I am insured by PetPlan and have all the necessary paperwork</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <legend>
             <h4 class="text-center"><a href="/about">
               <span class="fa-stack fa-lg">
@@ -78,21 +70,43 @@
           </legend>
           <p>Dog bording in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-3">
           <legend>
             <h4 class="text-center"><a href="/about">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
               </span>
-              Cat and Small Animal Care
+              Small Animal Care
             </a></h4>
           </legend>
           <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute visit which includes picking up mail, switching lights on/off and snuggles with your pet. </p>
         </div>
+        <div class="col-md-3">
+          <legend>
+            <h4 class="text-center"><a href="/about">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-certificate fa-stack-1x fa-inverse"></i>
+              </span>
+              Fully Insured
+            </a></h4>
+          </legend>
+          <p>I am fully insured by <a href="petplan.co.uk">PetPlan</a> the top pet insurance agency in the country. Making sure that your pet are safe is my top priority. They will be well cared for.</p>
+        </div>
       </div>
-    </div>
+      </div>
+       <div class="partition">
+
+  </div>
+
+  <div class="jumbotron last-child">
+    <legend><h2 class="text-center page-lead"><b>Dog Walking - Dog Bording - Small Animal Care</b></h2></legend>
+    <p class="lead">Hello, my name is Emilie Stewart and I run 'ilovedogwalks'. I offer dog walking and small pet care in North London. Based in North Finchley, I cover all of Finchley the surrounding areas.</p><p>Being a professional dog walker and small pet carer, I am fully insured and have over 10 years experience walking dogs and caring for small animals. I dedicate my time to caring for your pets. All the animals in my care are treated with love. Your pet will be treated as my own. I just love animals and of course they always come first.</p>
+  </div>
 </div>
+</div>
+
 
 <% include ../partials/footer %>
 </body>
