--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -10,7 +10,7 @@
 
 <div class="container">
 	<div class="jumbotron">
-		<h2 class="page-header text-center">Services Offered<small> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h2>
+		<h1 class="page-header">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h2>
 		<div class="row">
 			<div class="col-sm-6 col-md-4">
 				<div class="thumbnail">
@@ -18,7 +18,7 @@
 					<div class="caption">
 						<h3 class="text-center">Walk - £12</h3>
 						<p>Group dog walk either morning or afternoon. Have your dog walked regularly and let them socialize with other animals.</p>
-						<p class="text-center"><a href="#" class="btn btn-primary" role="button">Inquire Now!</a></p>
+						<p class="text-center"><a href="/email" class="btn btn-primary" role="button">Inquire Now!</a></p>
 					</div>
 				</div>
 			</div>
@@ -28,7 +28,7 @@
 					<div class="caption">
 						<h3 class="text-center">Home Visit/Cat Visit - £12</h3>
 						<p>Home visits to break up the day. Include letting out, feeding, cleaning up, (a short walk if old enough to do so).</p>
-						<p class="text-center"><a href="#" class="btn btn-primary" role="button">Inquire Now!</a></p>
+						<p class="text-center"><a href="/email" class="btn btn-primary" role="button">Inquire Now!</a></p>
 					</div>
 				</div>
 			</div>
@@ -38,7 +38,7 @@
 					<div class="caption">
 						<h3 class="text-center">Day Care - £25</h3>
 						<p>Day care hours are generally around 10am-4pm but these times are flexible to your needs. Your dog will have at least 2 walks.</p>
-						<p class="text-center"><a href="#" class="btn btn-primary" role="button">Inquire Now!</a></p>
+						<p class="text-center"><a href="/email" class="btn btn-primary" role="button">Inquire Now!</a></p>
 					</div>
 				</div>
 			</div>
