--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -10,12 +10,12 @@
 	<div class="jumbotron">
 		<h1 class="page-header">Contact<small class="smally"> Tel: 07971060362 | Email: info@ilovedogwalks.co.uk</small></h2>
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-md-7">
 				<iframe width="500" height="450" frameborder="0" style="margin: 1em;"
 	src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJx_FvA-IZdkgRzce1x-tA2Dc&key=AIzaSyBAbx-I6MUz8mqe4OauNjlkmmVpbYZkHl4" ></iframe>
 			</div>
-			<div class="col-md-4">
-				<p><small>Based in North Finchley N12 we cover:</small></p>
+			<div class="col-md-5">
+				<h4>Based in North Finchley N12 we cover:</h4>
 				<ul>
 				<li>East Finchley N2</li>
 				<li>Finchley Central N3</li> 
@@ -27,6 +27,8 @@
 				<li>Muswell Hill N10</li>
 				<li>Mill Hill East NW7 & And all inbetween!</li>
 				</ul>
+				<br>
+				<h4>Where we walk:</h4>
 				<p><small>We are spoilt for choice to where we can go for walkies. Brook Farm Open Space, Darland's Lake Nature Reserve, Hampstead Heath and Highgate Woods just to name a few... London is such a great place to own a dog!</small>
 				</p>
 			</div>
