--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -45,6 +45,7 @@
   </div>
 
     <div class="jumbotron">
+    <div class="col-md-12"><h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1></div>
     <div class="row">
       <div class="col-md-3">
         <legend>
@@ -92,7 +93,7 @@
               Fully Insured
             </a></h4>
           </legend>
-          <p>I am fully insured by <a href="petplan.co.uk">PetPlan</a> the top pet insurance agency in the country. Making sure that your pet are safe is my top priority. They will be well cared for.</p>
+          <p>I am fully insured by <a target="_blank" href="https://www.petplan.co.uk">PetPlan</a> the top pet insurance agency in the country. Making sure that your pets are safe is my top priority. They will be well cared for.</p>
         </div>
       </div>
       </div>
