--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -9,15 +9,21 @@
 
 
 <div class="container">
-	<div class="jumbotron">
+	<div class="jumbotron last-child">
 		<h1 class="page-header">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h2>
 		<div class="row">
 			<div class="col-sm-6 col-md-4">
 				<div class="thumbnail">
 					<img  src="dogs_on_a_leash.jpg" alt="dog walking price">
 					<div class="caption">
-						<h3 class="text-center">Walk - £12</h3>
-						<p>Group dog walk either morning or afternoon. Have your dog walked regularly and let them socialize with other animals.</p>
+						<h3 class="text-center">Walks - £12</h3>
+						<ul>
+							<li><p>Pick up and drop off</p></li>
+							<li><p>Exercise & socialization with other dogs</p></li>
+							<li><p>1 - 1.5 hours of walking</p></li>
+							<li><p>Park location vary</p></li>
+							<li><p>Brings dogs home ready for a nap</p></li>
+						</ul>
 						<p class="text-center"><a href="/email" class="btn btn-primary" role="button">Inquire Now!</a></p>
 					</div>
 				</div>
@@ -27,7 +33,12 @@
 					<img id="shorten" src="cat_img.jpg" alt="dog walking price">
 					<div class="caption">
 						<h3 class="text-center">Home Visit/Cat Visit - £12</h3>
-						<p>Home visits to break up the day. Include letting out, feeding, cleaning up, (a short walk if old enough to do so).</p>
+						<ul>
+							<li><p>Visits in the comfort of their own home</p></li>
+							<li><p>Ideal for young puppies & elderly dogs</p></li>
+							<li><p>Small Animal feeding including cat visits</p></li>
+							<li><p>Perfect for the busy animal owner</p></li>
+						</ul>
 						<p class="text-center"><a href="/email" class="btn btn-primary" role="button">Inquire Now!</a></p>
 					</div>
 				</div>
