--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<div class="navbar navbar-inverse">
+<div class="navbar navbar-default">
 	<div class="navbar-text">
 		<p>CreatedBy: CairoStewart</p>
 	</div>
