--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
 
-<div class="navbar navbar-fixed-top navbar-inverse">
+<div class="navbar navbar-fixed-top navbar-default">
 	<div class="container">
 		<div class="navbar-header">
 			<a href="/" class="navbar-brand">
@@ -28,8 +28,6 @@
 			<li><a href="/about">About</a></li>
 			<li><a href="/prices">Prices</a></li>
 			<li><a href="/contact">Contact</a></li>
-			<li><p class="navbar-text">Tel: 07971060362 | Email: info@ilovedogwalks.co.uk</p></li>
-			
 		</ul>
 	</div>
 </div>
