add darkly theme

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -16,13 +16,13 @@
 					<h1 class="page-header">ABOUT<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
 				</div>
 				<div class="row">
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-4">
 						<img id="profilePic" class="img-thumbnail" src="dogwalking.jpg">
 						<a class="twitter-timeline" href="https://twitter.com/London_Dog_Walk" data-widget-id="681905171434061824" data-chrome="">Tweets by @London_Dog_Walk</a>
 					<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 					</script>
 					</div>
-					<div class="col-md-8">
+					<div class="col-md-8 col-sm-8">
 						<p>Hello there, my name is Emilie. I have been a professional dog walker for the past 10+ years.</p>
 
 						<p> I became a dog walker as I missed having dogs in my life, when I was growing up I always had dogs in my life. I had a German Shorthaired Pointer called Daisy and, a cheeky Cairn Terrier called Devo. Years later, working in the city and renting, I found myself dogless and even worse petless only having tropical fish to call my own, they were pretty and relaxing but couldn't offer the companionship a dog or cat could, I missed having them in my life! I started to walk a couple of dogs in my local area, and after finishing my degree decided to devote my time to petcare, and that's were it all started!</p>
