--- a/public/main.css
+++ b/public/main.css
@@ -3,6 +3,7 @@ body {
 	height: 100%;
 	width: 100%;
 	font-size: 16px;
+	background: black;
 }
 
 /*color changes here */
@@ -84,7 +85,7 @@ iframe {
 }
 
 #carouselImage {
-	height: 450px;
+	height: 400px;
 	width: 100%;
 }
 
