add col-sm to about page

--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -37,7 +37,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-12">
 				<div class="fb-page" data-href="https://www.facebook.com/northlondondogwalkers" data-tabs="timeline" data-width="350" data-height="1200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" transparent><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/northlondondogwalkers"><a href="https://www.facebook.com/northlondondogwalkers">Dog Walking - ilovedogwalks</a></blockquote></div></div>
 			</div>
 		</div>
