--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,7 +42,7 @@
   <!-- carousel end -->
     <div class="partition">
     </div>
-    <div class="jumbotron">
+    <div class="jumbotron no-border-radius">
     <div class="col-md-12"><h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1></div>
     <div class="row">
       <div class="col-md-3">
