--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -23,8 +23,9 @@
 							<li><p>1 - 1.5 hours of walking</p></li>
 							<li><p>Park location vary</p></li>
 							<li><p>Brings dogs home ready for a nap</p></li>
+							<br>
 						</ul>
-						<p class="text-center"><a href="/email" class="btn btn-primary" role="button">Inquire Now!</a></p>
+						<p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
 					</div>
 				</div>
 			</div>
@@ -39,7 +40,7 @@
 							<li><p>Small Animal feeding including cat visits</p></li>
 							<li><p>Perfect for the busy animal owner</p></li>
 						</ul>
-						<p class="text-center"><a href="/email" class="btn btn-primary" role="button">Inquire Now!</a></p>
+						<p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
 					</div>
 				</div>
 			</div>
@@ -48,8 +49,15 @@
 					<img src="dog_daycare.jpg" alt="dog walking price">
 					<div class="caption">
 						<h3 class="text-center">Day Care - £25</h3>
-						<p>Day care hours are generally around 10am-4pm but these times are flexible to your needs. Your dog will have at least 2 walks.</p>
-						<p class="text-center"><a href="/email" class="btn btn-primary" role="button">Inquire Now!</a></p>
+						<li><p>Pick Up & Drop Off</p></li>
+						<li><p>General hours 10am - 4pm</p></li>
+						<li><p>Includes 2 hours of walking</p></li>
+						<li><p>Fantastic for dogs who don't like to be left on their own.</p></li>
+						<li><p>Ideal for the busy animal owner</p></li>
+						<br>
+						<br>
+						<br>
+						<p class="text-center"><a href="/email" class="btn btn-danger" role="button">Inquire Now!</a></p>
 					</div>
 				</div>
 			</div>
