--- a/public/main.css
+++ b/public/main.css
@@ -12,7 +12,6 @@ body {
 	border-radius: 0;
 	margin-bottom: 0;
 	border: none;
-	/*background: #00898e;*/
 	background: #00898E;
 }
 
@@ -20,9 +19,40 @@ body {
 	width: 100%;
 	height: 50px;
 	background: #00898E;
-	border-radius: 5px;
-	/*background: #e65212;*/
 }
+
+.partition.main{
+	margin-top: 5%;
+	height: 1000px;
+
+}
+
+/* jumbotron here */
+
+.jumbotron {
+	margin-top: 0;
+	margin-bottom: 0;
+	border-radius: 0;
+}
+
+.jumbotron.no-border-radius {
+	border-radius: 0;
+}
+
+.jumbotron.last-child {
+	margin-bottom: 6%;
+}
+
+.jumbotron h1 {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.jumbotron p {
+	font-size: 1.25555551em;
+}
+
+/* a tags */
 
 a {
 	color: white;
@@ -44,17 +74,9 @@ a:hover {
 	height: 230px;
 	width: 230px;
 }
-.jumbotron p {
-	font-size: 1.25555551em;
-}
 
 #mainPageHeader {
 	margin-top: .1%;
-}
-
-.jumbotron h1 {
-	padding-left: 20px;
-	padding-right: 20px;
 }
 
 #profilePic {
@@ -62,20 +84,6 @@ a:hover {
 	margin-left: 1%;
 	margin-bottom: 10%;
 
-}
-/*h2 {
-	margin-top: .01%;
-	padding-bottom: 1%;
-}*/
-
-.partition.main{
-	margin-top: 5%;
-	height: 1000px;
-
-}
-
-iframe {
-	margin-top: 5%;
 }
 
 #myCarousel {
@@ -89,14 +97,8 @@ iframe {
 	width: 100%;
 }
 
-.jumbotron {
-	margin-top: 0;
-	margin-bottom: 0;
-	border-radius: 0;
-}
-
-.jumbotron.last-child {
-	margin-bottom: 6%;
+iframe {
+	margin-top: 5%;
 }
 
 .block {
