--- a/public/main.css
+++ b/public/main.css
@@ -1,9 +1,13 @@
 body {
-	background-attachment: fixed;
 	height: 100%;
 	width: 100%;
 	font-size: 16px;
 	background: black;
+}
+
+#background {
+	background: url(black-Linen.png) repeat;
+	background-attachment: fixed;
 }
 
 /*color changes here */
@@ -55,7 +59,7 @@ body {
 /* a tags */
 
 a {
-	color: white;
+	color: #00898E;
 }
 
 a i {
@@ -90,6 +94,7 @@ a:hover {
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 5px;
+	margin-top: 5%;
 }
 
 #carouselImage {
