add no-border-radius css

--- a/views/pages/email.ejs
+++ b/views/pages/email.ejs
@@ -7,7 +7,7 @@
 <% include ../partials/header %>
 
 <div class="container">
-	<div class="jumbotron">
+	<div class="jumbotron no-border-radius">
 		<div class="row">
 		<h1 class="page-header">For Inquiries</h1>
 			<form action="/email" method="POST">
