--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -99,7 +99,7 @@
 
   </div>
 
-  <div class="jumbotron last-child">
+  <div class="jumbotron no-border-radius last-child">
     <legend><h2 class="text-center page-lead"><b>Dog Walking - Dog Bording - Small Animal Care</b></h2></legend>
     <p class="lead">Hello, my name is Emilie Stewart and I run 'ilovedogwalks'. I offer dog walking and small pet care in North London. Based in North Finchley, I cover all of Finchley and the surrounding areas.</p><p>Being a professional dog walker and small pet carer, I am fully insured and have over 10 years experience walking dogs and caring for small animals. I dedicate my time to caring for your pets. All the animals in my care are treated with love. Your pet will be treated as my own. I just love animals and of course they always come first.</p>
   </div>
