--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -9,7 +9,7 @@
 
 
 <div class="container">
-	<div class="jumbotron last-child">
+	<div class="jumbotron no-border-radius last-child">
 		<h1 class="page-header">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h2>
 		<div class="row">
 			<div class="col-sm-6 col-md-4">
