--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -7,7 +7,7 @@
 <% include ../partials/header %>
 
 <div class="container">
-	<div class="jumbotron">
+	<div class="jumbotron no-border-radius">
 		<h1 class="page-header">Contact<small class="smally"> Tel: 07971060362 | Email: info@ilovedogwalks.co.uk</small></h2>
 		<div class="row">
 			<div class="col-md-7">
