--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -46,9 +46,9 @@
     <div class="col-md-12"><h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1></div>
     <div class="row">
       <div class="col-md-3">
-        <legend>
-          <h4 class="text-center"><a href="/about">
-            <span class="fa-stack fa-lg">
+        <center><legend>
+          <h4><a href="/about">
+            <span class="fa-stack fa-2x">
               <i class="fa fa-circle fa-stack-2x"></i>
               <i class="fa fa-paw fa-stack-1x fa-inverse"></i>
             </span>
@@ -56,11 +56,11 @@
           </a></h4>
         </legend>
         <p>Choose between a 1 hour walk or 1.5hr walk depending on your dogs needs. Your dog will be safely picked up and returned happy and ready for a nap. I am insured by PetPlan and have all the necessary paperwork</p>
-        </div>
+        </center></div>
         <div class="col-md-3">
-          <legend>
-            <h4 class="text-center"><a href="/about">
-              <span class="fa-stack fa-lg">
+          <center><legend>
+            <h4><a href="/about">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-home fa-stack-1x fa-inverse"></i>
               </span>
@@ -68,11 +68,11 @@
             </a></h4>
           </legend>
           <p>Dog bording in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
-        </div>
+        </center></div>
         <div class="col-md-3">
-          <legend>
-            <h4 class="text-center"><a href="/about">
-              <span class="fa-stack fa-lg">
+          <center><legend>
+            <h4><a href="/about">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
               </span>
@@ -80,11 +80,11 @@
             </a></h4>
           </legend>
           <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute visit which includes picking up mail, switching lights on/off and snuggles with your pet. </p>
-        </div>
+        </center></div>
         <div class="col-md-3">
-          <legend>
-            <h4 class="text-center"><a href="/about">
-              <span class="fa-stack fa-lg">
+          <center><legend>
+            <h4><a href="/about">
+              <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-certificate fa-stack-1x fa-inverse"></i>
               </span>
@@ -92,12 +92,11 @@
             </a></h4>
           </legend>
           <p>I am fully insured by <a target="_blank" href="https://www.petplan.co.uk">PetPlan</a> the top pet insurance agency in the country. Making sure that your pets are safe is my top priority. They will be well cared for.</p>
-        </div>
+        </center></div>
       </div>
       </div>
-       <div class="partition">
+      <div class="partition"></div>
 
-  </div>
 
   <div class="jumbotron no-border-radius last-child">
     <legend><h2 class="text-center page-lead"><b>Dog Walking - Dog Bording - Small Animal Care</b></h2></legend>
