--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -3,7 +3,7 @@
 <head>
 	<% include ../partials/head %>
 </head>
-<body>
+<body id="background">
 <% include ../partials/header %>
 
 
@@ -34,10 +34,12 @@
 						<i class="fa fa-paw text-center fa-2x" style="margin-left: 5%;margin-right: 5%;"></i>
 						<i class="fa fa-paw text-center fa-2x"></i>
 						</center>
+
 					</div>
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-12">
+				<center><a id="review-button" href="/reviews" class="btn btn-primary form-control">Reviews!</a></center>
 				<div class="fb-page" data-href="https://www.facebook.com/northlondondogwalkers" data-tabs="timeline" data-width="350" data-height="1200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" transparent><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/northlondondogwalkers"><a href="https://www.facebook.com/northlondondogwalkers">Dog Walking - ilovedogwalks</a></blockquote></div></div>
 			</div>
 		</div>
