--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,7 @@
 <footer class="navbar navbar-default">
-	<center><div class="col-md-12">
-		<div class="navbar-text navbar-texty">
-			<p>CreatedBy: CairoStewart</p>
-		</div>
-		<address class="navbar-text navbar-texty">
-		  <strong>ilovedogwalks</strong><br>
-		  North Finchley London, N12<br>
-		  <abbr title="Phone">P: </abbr> 07971 060 362
-		</address>
-	</div></center>
+	<div class="navbar-header">
+		<a class="navbar-brand">
+			<img style="width: 150px;" src="cairoLogo.png" />
+		</a>
+	</div>
 </footer>
