--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -6,7 +6,7 @@
 <body id="background">
 <% include ../partials/header %>
 
-<div class="container">
+<div class="container-fluid">
 	<div class="jumbotron no-border-radius">
 		<h1 class="page-header">Contact<small class="smally"> Tel: 07971060362 | Email: info@ilovedogwalks.co.uk</small></h2>
 		<div class="row">
