--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
 </head>
 <body id="background">
 <% include ../partials/header %>
-<div class="container">
+<div class="container-fluid">
 <!-- for carousel -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
