--- a/views/pages/reviews.ejs
+++ b/views/pages/reviews.ejs
@@ -6,7 +6,7 @@
 	<body id="background">
 	<% include ../partials/header %>
 
-	<div class="container">
+	<div class="container-fluid">
 		<div class="jumbotron">
 			<h1 class="page-header">Reviews<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
 		</div>
