--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -8,7 +8,7 @@
 
 
 
-<div class="container-fluid">
+<div class="container">
 	<div class="jumbotron last-child">
 		<div class="row">
 			<div class="col-md-9">
