--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -10,7 +10,11 @@
 
 <div class="container">
 	<div class="jumbotron no-border-radius last-child">
-		<h1 class="page-header">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h2>
+		<div class="row">
+			<div class="col-sm-12">
+				<h1 class="page-header">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
+			</div>
+		</div>
 		<div class="row">
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
