--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -70,8 +70,12 @@
 </div>
 
 <div class="navbar navbar-fixed-bottom navbar-inverse">
-	<div class="navbar-text">
-		<p>CreatedBy: CairoStewart</p>
+	<div class="container">
+		<div class="navbar-header">
+			<a class="navabar-brand" href="www.github.com/masakistewart">
+				<img src="cairoLogo.png">
+			</a>
+		</div>
 	</div>
 </div>
 </body>
