--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,9 @@
 <footer class="navbar navbar-default">
-	<div class="navbar-header">
-		<a class="navbar-brand">
-			<img style="width: 150px;" src="cairoLogo.png" />
-		</a>
+	<div class="container">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="https://www.github.com/masakistewart">
+				<img id="logo" src="cairoLogo.png" />
+			</a>
+		</div>
 	</div>
 </footer>
