logo change on prices

--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -69,14 +69,6 @@
 	</div>
 </div>
 
-<div class="navbar navbar-fixed-bottom navbar-inverse">
-	<div class="container">
-		<div class="navbar-header">
-			<a class="navabar-brand" href="www.github.com/masakistewart">
-				<img src="cairoLogo.png">
-			</a>
-		</div>
-	</div>
-</div>
+<% include ../partial/footer %>
 </body>
 </html>
