--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,10 +18,10 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img id="carouselImage" src="dogs-in-Fichley-park.jpg" alt="Dog walking in a park">
+        <img id="carouselImage" src="dog-img.jpg" alt="Dog walking in a park">
       </div>
       <div class="item">
-        <img id="carouselImage" src="dog-walking-in-Finchley.jpg" alt="Dogs out in the park">
+        <img id="carouselImage" src="dogs-img.jpg" alt="Dogs out in the park">
       </div>
       <div class="item">
         <img id="carouselImage" src="dog-in-Finchley.jpg" alt="Dog walker in Finchley">
