logo change on prices

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,10 +21,10 @@
         <img id="carouselImage" src="dog-img.jpg" alt="Dog walking in a park">
       </div>
       <div class="item">
-        <img id="carouselImage" src="dogs-img.jpg" alt="Dogs out in the park">
+        <img id="carouselImage" src="dog-img2.jpg" alt="Dogs out in the park">
       </div>
       <div class="item">
-        <img id="carouselImage" src="dog-in-Finchley.jpg" alt="Dog walker in Finchley">
+        <img id="carouselImage" src="dog-img3.jpg" alt="Dog walker in Finchley">
       </div>
     </div>
 
