change prices picture 1

--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -50,7 +50,7 @@
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
-					<img src="dog_daycare.jpg" alt="dog walking price">
+					<img src="dog-img4.jpg" alt="dog walking price">
 					<div class="caption">
 						<h3 class="text-center">Day Care - £25</h3>
 						<li><p>Pick Up & Drop Off</p></li>
