--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -18,7 +18,7 @@
 		<div class="row">
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
-					<img  src="dogs_on_a_leash.jpg" alt="dog walking price">
+					<img  src="dog-img5.jpg" alt="dog walking price">
 					<div class="caption">
 						<h3 class="text-center">Walks - £12</h3>
 						<ul>
@@ -35,7 +35,7 @@
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
-					<img id="shorten" src="cat_img.jpg" alt="dog walking price">
+					<img class="shorten" src="dog-img6.jpg" alt="dog walking price">
 					<div class="caption">
 						<h3 class="text-center">Home Visit/Cat Visit - £12</h3>
 						<ul>
@@ -50,7 +50,7 @@
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
-					<img src="dog-img4.jpg" alt="dog walking price">
+					<img class="shorten" src="dog-img4.jpg" alt="dog walking price">
 					<div class="caption">
 						<h3 class="text-center">Day Care - £25</h3>
 						<li><p>Pick Up & Drop Off</p></li>
