--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<% include ../partials/head %>
+	<meta charset="UTF-8">
+	<meta name="description" content="Contact info for dog walking areas. Covering all of North Finchley, Totteridge and Whetstone.">
+	<meta name="keywords" content="Dog walking area, Dog Parks, Finchley, London">
+	<meta name="author" content="Cairo Stewart">
 </head>
 <body id="background">
 <% include ../partials/header %>
