--- a/views/pages/reviews.ejs
+++ b/views/pages/reviews.ejs
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<% include ../partials/head %>
+	<meta charset="UTF-8">
+	<meta name="description" content="reviews of ilovedogwalks.co.uk, the customer is king!">
+	<meta name="keywords" content="Dog walker reviews, Finchle, London">
+	<meta name="author" content="Cairo Stewart">
 </head>
 	<body id="background">
 	<% include ../partials/header %>
