--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -49,7 +49,7 @@
     <div class="jumbotron no-border-radius">
     <div class="col-md-12"><h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1></div>
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <center><legend>
           <h4><a href="/about">
             <span class="fa-stack fa-2x">
@@ -61,7 +61,7 @@
         </legend>
         <p>Choose between a 1 hour walk or 1.5hr walk depending on your dogs needs. Your dog will be safely picked up and returned happy and ready for a nap. I am insured by PetPlan and have all the necessary paperwork</p>
         </center></div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-12">
           <center><legend>
             <h4><a href="/about">
               <span class="fa-stack fa-2x">
@@ -73,7 +73,7 @@
           </legend>
           <p>Dog bording in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
         </center></div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-12">
           <center><legend>
             <h4><a href="/about">
               <span class="fa-stack fa-2x">
@@ -85,7 +85,7 @@
           </legend>
           <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute visit which includes picking up mail, switching lights on/off and snuggles with your pet. </p>
         </center></div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-12">
           <center><legend>
             <h4><a href="/about">
               <span class="fa-stack fa-2x">
