--- a/public/main.css
+++ b/public/main.css
@@ -2,7 +2,6 @@ body {
 	height: 100%;
 	width: 100%;
 	font-size: 16px;
-	background: black;
 }
 
 /*color changes here */
@@ -10,6 +9,7 @@ body {
 .navbar {
 	border-radius: 0;
 	margin-bottom: 0;
+	pading: 0;
 	border: none;
 	background: #00898E;
 }
@@ -106,7 +106,7 @@ a:hover {
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 5px;
-	margin-top: 5%;
+	margin-top: 0%;
 }
 
 #carouselImage {
