--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<% include ../partials/head %>
 	<meta charset="UTF-8">
 	<meta name="description" content="Contact info for dog walking areas. Covering all of North Finchley, Totteridge and Whetstone.">
 	<meta name="keywords" content="Dog walking area, Dog Parks, Finchley, London">
 	<meta name="author" content="Cairo Stewart">
+	<% include ../partials/head %>
 </head>
 <body id="background">
 <% include ../partials/header %>
@@ -35,14 +35,19 @@
 				<h4>Where we walk:</h4>
 				<p><small>We are spoilt for choice to where we can go for walkies. Brook Farm Open Space, Darland's Lake Nature Reserve, Hampstead Heath and Highgate Woods just to name a few... London is such a great place to own a dog!</small>
 				</p>
+				<a class="btn btn-success" href="/email">Email Now!</a>
 			</div>
 		</div>
 	</div>
 </div>
 
 <div class="navbar navbar-fixed-bottom navbar-inverse">
-	<div class="navbar-text">
-		<p>CreatedBy: CairoStewart</p>
+	<div class="container">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="https://www.github.com/masakistewart">
+				<img id="logo" src="cairoLogo.png" />
+			</a>
+		</div>
 	</div>
 </div>
 </body>
