--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -16,7 +16,11 @@
 		<div class="row">
 			<div class="col-md-9">
 				<div class="col-md-12">
-					<h1 class="page-header">ABOUT<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
+					<div itemscope>
+						<h1 class="page-header">ABOUT<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
+						<span>Owner: Emilie Stewart</span>
+						<span>Dog Walking</span>
+					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4 col-sm-4">
@@ -42,7 +46,7 @@
 				</div>
 			</div>
 			<div class="col-md-3 col-sm-12">
-				<center><a id="review-button" href="/reviews" class="btn btn-primary form-control">Reviews!</a></center>
+				<center><a id="review-button" href="/reviews" class="btn btn-success form-control">Reviews!</a></center>
 				<div class="fb-page" data-href="https://www.facebook.com/northlondondogwalkers" data-tabs="timeline" data-width="350" data-height="1200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" transparent><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/northlondondogwalkers"><a href="https://www.facebook.com/northlondondogwalkers">Dog Walking - ilovedogwalks</a></blockquote></div></div>
 			</div>
 		</div>
