--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -14,6 +14,7 @@
 
 <div class="container">
 	<div class="jumbotron no-border-radius last-child">
+		<div class="col-md-12 text-right" style="margin-top: 2%;"><a href="/reviews" class="btn btn-success">Reviews!</a></div>
 		<div class="row">
 			<div class="col-sm-12">
 				<h1 class="page-header">Services Offered<small class="smally"> Contact: 07971060362 | info@ilovedogwalks.co.uk</small></h1>
