--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Dog walker located in North Finchey. Offering dog walks in Finchley, Totteridge and Whetstone.">
-  <meta name="keywords" content="Dog walker, Walks, Boarding, Daycare, Finchley, London">
+  <meta name="description" content="Dog walker located in North Finchley. Offering dog walks in Finchley, Totteridge and Whetstone.">
+  <meta name="keywords" content="Dog walker, Walks, Boarding, Finchley, London">
   <meta name="author" content="Cairo Stewart">
+  <title>Dog Walker North Finchley</title>
 	<% include ../partials/head %>
 </head>
 <body id="background">
@@ -68,10 +69,10 @@
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-home fa-stack-1x fa-inverse"></i>
               </span>
-              Bording
+              Boarding
             </a></h4>
           </legend>
-          <p>Dog bording in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
+          <p>Dog boarding in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
         </center></div>
         <div class="col-md-3 col-sm-12">
           <center><legend>
@@ -103,7 +104,7 @@
 
 
   <div class="jumbotron no-border-radius last-child">
-    <legend><h2 class="text-center page-lead"><b>Dog Walking - Dog Bording - Small Animal Care</b></h2></legend>
+    <legend><h2 class="text-center page-lead"><b>Dog Walking - Dog Boarding - Small Animal Care</b></h2></legend>
     <p class="lead">Hello, my name is Emilie Stewart and I run 'ilovedogwalks'. I offer dog walking and small pet care in North London. Based in North Finchley, I cover all of Finchley and the surrounding areas.</p><p>Being a professional dog walker and small pet carer, I am fully insured and have over 10 years experience walking dogs and caring for small animals. I dedicate my time to caring for your pets. All the animals in my care are treated with love. Your pet will be treated as my own. I just love animals and of course they always come first.</p>
   </div>
 </div>
