--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Dog walker located in North Finchey. Offering dog walks in Finchley, Totteridge and Whetstone.">
+	<meta name="description" content="Dog walker located in North Finchley. Offering dog walks in Finchley, Totteridge and Whetstone.">
 	<meta name="keywords" content="Dog walker, Walks, Boarding, Daycare, Finchley, London">
 	<meta name="author" content="Cairo Stewart">
 	<% include ../partials/head %>
