--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Dog walking prices in North Finchey. Offering dog walks in Finchley at a good rate, Totteridge and Whetstone as well.">
+	<meta name="description" content="Dog walking prices in North Finchley. Offering dog walks in Finchley at a good rate, Totteridge and Whetstone as well.">
 	<meta name="keywords" content="Dog walking prices, Walking rates, dog care, Daycare, Finchley, London">
 	<meta name="author" content="Cairo Stewart">
 	<% include ../partials/head %>
