--- a/views/pages/reviews.ejs
+++ b/views/pages/reviews.ejs
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="reviews of ilovedogwalks.co.uk, the customer is king!">
-	<meta name="keywords" content="Dog walker reviews, Finchle, London">
+	<meta name="keywords" content="Dog walker reviews, Finchley, London">
 	<meta name="author" content="Cairo Stewart">
 	<% include ../partials/head %>
 </head>
