--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -5,6 +5,7 @@
 	<meta name="description" content="Dog walking prices in North Finchley. Offering dog walks in Finchley at a good rate, Totteridge and Whetstone as well.">
 	<meta name="keywords" content="Dog walking prices, Walking rates, dog care, Daycare, Finchley, London">
 	<meta name="author" content="Cairo Stewart">
+	<title>ilovedogwalks - prices</title>
 	<% include ../partials/head %>
 </head>
 <body id="background">
