--- a/views/pages/reviews.ejs
+++ b/views/pages/reviews.ejs
@@ -6,6 +6,7 @@
 	<meta name="keywords" content="Dog walker reviews, Finchley, London">
 	<meta name="author" content="Cairo Stewart">
 	<% include ../partials/head %>
+	<title>ilovedogwalks - reviews</title>
 </head>
 	<body id="background">
 	<% include ../partials/header %>
