--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -5,6 +5,7 @@
 	<meta name="description" content="Dog walker located in North Finchley. Offering dog walks in Finchley, Totteridge and Whetstone.">
 	<meta name="keywords" content="Dog walker, Walks, Boarding, Daycare, Finchley, London">
 	<meta name="author" content="Cairo Stewart">
+	<title>ilovedogwalks - about</title>
 	<% include ../partials/head %>
 </head>
 <body id="background">
