--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -5,6 +5,7 @@
 	<meta name="description" content="Contact info for dog walking areas. Covering all of North Finchley, Totteridge and Whetstone.">
 	<meta name="keywords" content="Dog walking area, Dog Parks, Finchley, London">
 	<meta name="author" content="Cairo Stewart">
+	<title>ilovedogwalks - contact</title>
 	<% include ../partials/head %>
 </head>
 <body id="background">
