--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,10 +23,10 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img id="carouselImage" src="dog-img.jpg" alt="Dog walking in a park">
+        <img id="carouselImage" src="dog-img.png" alt="Dog walking in a park">
       </div>
       <div class="item">
-        <img id="carouselImage" src="dog-img2.jpg" alt="Dogs out in the park">
+        <img id="carouselImage" src="dog-img2.png" alt="Dogs out in the park">
       </div>
       <div class="item">
         <img id="carouselImage" src="dog-img3.jpg" alt="Dog walker in Finchley">
