--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -24,7 +24,7 @@
 		<div class="row">
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
-					<img  src="dog-img5.jpg" alt="dog walking price">
+					<img class="thumbnail-img"  src="dog-img5.jpg" alt="dog walking price">
 					<div class="caption">
 						<h3 class="text-center">Walks - £12</h3>
 						<ul>
@@ -41,7 +41,7 @@
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
-					<img class="shorten" src="dog-img6.jpg" alt="dog walking price">
+					<img class="thumbnail-img" class="shorten" src="dog-img6.jpg" alt="dog walking price">
 					<div class="caption">
 						<h3 class="text-center">Home Visit/Cat Visit - £12</h3>
 						<ul>
@@ -56,7 +56,7 @@
 			</div>
 			<div class="col-sm-12 col-md-4">
 				<div class="thumbnail">
-					<img class="shorten" src="dog-img4.jpg" alt="dog walking price">
+					<img class="thumbnail-img" src="dog-img4.jpg" alt="dog walking price">
 					<div class="caption">
 						<h3 class="text-center">Day Care - £25</h3>
 						<li><p>Pick Up & Drop Off</p></li>
