--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
   <meta name="description" content="Dog walker located in North Finchley. Offering dog walks in Finchley, Totteridge and Whetstone.">
   <meta name="keywords" content="Dog walker, Walks, Boarding, Finchley, London">
   <meta name="author" content="Cairo Stewart">
-  <title>Dog Walker North Finchley</title>
+  <title>ilovedogwalks - North Finchley</title>
 	<% include ../partials/head %>
 </head>
 <body id="background">
