add darkly change css

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
-<footer class="navbar navbar-default">
+<footer class="navbar navbar-inverse">
 	<div class="container">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="https://www.github.com/masakistewart">
-				<img id="logo" src="cairoLogo.png" />
+				<img id="logo" src="cairoLogo.png" alt="creator-logo" />
 			</a>
 		</div>
 	</div>
