--- a/public/main.css
+++ b/public/main.css
@@ -2,7 +2,8 @@ body {
 	height: 100%;
 	width: 100%;
 	font-size: 16px;
-	background: #4E5D6C;
+	margin-top: 60px;
+	/*background: #4E5D6C;*/
 }
 
 /*color changes here */
@@ -12,13 +13,13 @@ body {
 	margin-bottom: 0;
 	pading: 0;
 	border: none;
-	background: #00898E;
 }
 
 .partition {
+	margin: .1px;
 	width: 100%;
 	height: 50px;
-	/*background: #00898E;*/
+	background: #00BC8C;
 }
 
 .partition-thin {
@@ -112,10 +113,11 @@ img.thumbnail-img {
 	margin-right: auto;
 	border-radius: 5px;
 	margin-top: 0%;
+	margin-bottom: .1px;
 	height: 400px;
 }
 
-#carouselImage {
+#myCarousel.carouselImage {
 	height: 400px;
 	width: 100%;
 }
