--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,13 +23,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img id="carouselImage" src="dog-img.jpg" alt="Dog walking in a park">
+        <img class="carouselImage" src="dog-img.jpg" alt="Dog walking in a park">
       </div>
       <div class="item">
-        <img id="carouselImage" src="dog-img2.jpg" alt="Dogs out in the park">
+        <img class="carouselImage" src="dog-img2.jpg" alt="Dogs out in the park">
       </div>
       <div class="item">
-        <img id="carouselImage" src="dog-img3.jpg" alt="Dog walker in Finchley">
+        <img class="carouselImage" src="dog-img3.jpg" alt="Dog walker in Finchley">
       </div>
     </div>
 
@@ -47,11 +47,12 @@
   <!-- carousel end -->
     <div class="partition">
     </div>
+
     <div class="jumbotron no-border-radius">
     <div class="col-md-12"><h1 id="mainPageHeader" class="page-header">Dog Walking Services</h1></div>
     <div class="row">
       <div class="col-md-3 col-sm-12">
-        <center><legend>
+        <legend>
           <h4><a href="/about">
             <span class="fa-stack fa-2x">
               <i class="fa fa-circle fa-stack-2x"></i>
@@ -61,9 +62,9 @@
           </a></h4>
         </legend>
         <p>Choose between a 1 hour walk or 1.5hr walk depending on your dogs needs. Your dog will be safely picked up and returned happy and ready for a nap. I am insured by PetPlan and have all the necessary paperwork</p>
-        </center></div>
+        </div>
         <div class="col-md-3 col-sm-12">
-          <center><legend>
+          <legend>
             <h4><a href="/about">
               <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -73,9 +74,9 @@
             </a></h4>
           </legend>
           <p>Dog boarding in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. Your pet will nap and do what animals love to do – play! </p>
-        </center></div>
+        </div>
         <div class="col-md-3 col-sm-12">
-          <center><legend>
+          <legend>
             <h4><a href="/about">
               <span class="fa-stack fa-2x">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -85,7 +86,7 @@
             </a></h4>
           </legend>
           <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute visit which includes picking up mail, switching lights on/off and snuggles with your pet. </p>
-        </center></div>
+        </div>
         <div class="col-md-3 col-sm-12">
           <center><legend>
             <h4><a href="/about">
