--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
 
-<div class="navbar navbar-fixed-top navbar-default">
+<div class="navbar navbar-fixed-top navbar-inverse">
 	<div class="container">
 		<div class="navbar-header">
 			<a href="/" class="navbar-brand">
