major changes --- if things go bad revert back 5 commits from here

--- a/public/main.css
+++ b/public/main.css
@@ -32,6 +32,11 @@ body {
 
 }
 
+.container-fluid {
+	width: 100%;
+	margin: 0;
+	padding: 0;
+}
 /* jumbotron here */
 
 .jumbotron {
@@ -70,10 +75,6 @@ a {
 	float: right;
 }
 
-a i {
-	color: black;
-}
-
 a:hover {
 	color: #e6525f;
 }
@@ -105,23 +106,6 @@ img.thumbnail-img {
 	margin-left: 1%;
 	margin-bottom: 10%;
 
-}
-
-#myCarousel {
-	margin-left: auto;
-	margin-right: auto;
-	border-radius: 5px;
-	margin-top: 0%;
-	height: 400px;
-}
-
-#myCarousel.carouselImage {
-	height: 400px;
-	width: 100%;
-}
-
-img.carouselImage {
-	height: 400px;
 }
 
 /* form */
@@ -183,7 +167,7 @@ iframe {
 
 
 @media only screen and (max-device-width: 480px) {
-	.container {
+	.container-fluid {
 		width: 100%;
 		padding-left: 1px;
 		padding-right: 1px;
