--- a/views/pages/prices.ejs
+++ b/views/pages/prices.ejs
@@ -13,7 +13,7 @@
 
 
 
-<div class="container">
+<div class="container-fluid">
 	<div class="jumbotron no-border-radius last-child">
 		<div class="col-md-12 text-right" style="margin-top: 2%;"><a href="/reviews" class="btn btn-success">Reviews!</a></div>
 		<div class="row">
