--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
 		<div class="navbar-header">
 			<a href="/" class="navbar-brand">
 				<i class='fa fa-paw'></i>
-				<span class="blue">i</span><span class="purple">Love</span><span class="red">Dog</span><span class="orange">Walks</span>
+				ilovedogwalks
 			</a>
 		</div>
 		<ul class="nav navbar-nav navbar-right">
