--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -12,7 +12,7 @@
 
 <% include ../partials/header %>
 
-<div class="container">
+<div class="container-fluid">
 	<div class="jumbotron last-child">
 		<div class="row">
 			<div class="col-md-9">
