--- a/views/pages/email.ejs
+++ b/views/pages/email.ejs
@@ -6,7 +6,7 @@
 <body id="background">
 <% include ../partials/header %>
 
-<div class="container">
+<div class="container-fluid">
 	<div class="jumbotron no-border-radius">
 		<div class="row">
 		<h1 class="page-header">For Inquiries</h1>
