--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,10 +10,12 @@
 </head>
 <body id="background">
 <% include ../partials/header %>
-<div class="container">
+<div class="container-fluid">
 <!-- for carousel -->
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
+    <div class="row">
+    <div class="col-md-12">
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -42,9 +44,11 @@
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
+    </div>
   </div>
-
+</div>
   <!-- carousel end -->
+
     <div class="partition">
     </div>
 
@@ -67,7 +71,7 @@
           <legend>
             <h4><a href="/about">
               <span class="fa-stack fa-2x">
-                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-circle fa-stack-2x green"></i>
                 <i class="fa fa-home fa-stack-1x fa-inverse"></i>
               </span>
               Boarding
